--- a/client/res/values/prefs.xml
+++ b/client/res/values/prefs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="ip">192.168.1.3</string>
+    <string name="ip">terranz.ath.cx</string>
     <string name="login">login</string>
     <string name="pass">pass</string>
+    <string name="loggedIn">loggedIn</string>
 </resources>
