--- a/client/res/values/prefs.xml
+++ b/client/res/values/prefs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="ip">172.29.135.145</string>
+    <string name="ip">terranout.ath.cx</string>
     <string name="login">login</string>
     <string name="pass">pass</string>
     <string name="loggedIn">loggedIn</string>
