--- a/client/src/main/res/layout/f_chats.xml
+++ b/client/src/main/res/layout/f_chats.xml
@@ -5,6 +5,10 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <TextView
+            android:text="chats"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:id="@+id/textView3"/>
     <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
